[project]
name = "grpo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.32.2",
    "ipykernel>=6.29.5",
    "omegaconf>=2.3.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "trl",
    "unsloth>=2025.2.5",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "pre-commit>=4.1.0",
    "ipywidgets>=8.1.5",
    "cmake>=3.31.4",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git", rev = "e95f9fb74a3c3647b86f251b7e230ec51c64b72b" }
