[project]
name = "grpo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.32.2",
    "ipykernel>=6.29.5",
    "omegaconf>=2.3.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "trl",
    "unsloth>=2025.2.5",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "pre-commit>=4.1.0",
    "ipywidgets>=8.1.5",
    "cmake>=3.31.4",
    "bitsandbytes>=0.45.2",
    "accelerate>=1.3.0",
    "xformers>=0.0.28.post3",
    "peft>=0.14.0",
    "triton>=3.1.0",
    "cut-cross-entropy>=25.1.1",
    "unsloth-zoo>=2025.2.3",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.3",
    "datasets>=3.2.0",
    "huggingface-hub>=0.28.1",
    "hf-transfer>=0.1.9",
    "ruff>=0.9.6",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git", rev = "e95f9fb74a3c3647b86f251b7e230ec51c64b72b" }
